--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.0",
     "D": "^1.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
