--- a/customer-ui/package.json
+++ b/customer-ui/package.json
@@ -2,18 +2,30 @@
   "name": "loyalty-customer-ui",
   "version": "1.0.0",
   "description": "Customer UI for Multi-Business Loyalty Platform",
-  "main": "server.js",
+  "main": "server-new.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server-new.js",
+    "dev": "nodemon server-new.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.10.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "node-fetch": "^2.7.0",
+    "undici": "^7.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["loyalty", "rewards", "customer", "ui"],
+  "keywords": [
+    "loyalty",
+    "rewards",
+    "customer",
+    "ui"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
